# VaultProof

./: .gitignore  Anchor.toml  COORDINATION.md  Cargo.toml  DESIGN.md  PRODUCTION_CHECKLIST.md  README.md  design-preview.html  package.json  vaultproof-fix-addendum.md  vaultproof-product-revamp.md  vaultproof-technical-architecture.md
.codex/: agent-1-cargo-fix-integration.md  agent-1-circuit-verifier.md  agent-2-anchor-tests-green.md  agent-2-kyc-registry.md  agent-3-frontend-docs.md  agent-3-frontend-wiring.md
agents/: agent-1-circuit-recompile.md  agent-2-kyc-registry.md  agent-3-vault-program.md  agent-4-compliance-squads.md  agent-5-frontend.md
app/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vercel.json  vite.config.ts
app/e2e/: deposit.e2e.ts  full-flow.e2e.ts  operator.e2e.ts  smoke.e2e.ts
app/e2e/helpers/: setup-localnet.ts
app/public/circuits/: verification_key.json
app/src/: App.tsx  index.css  main.tsx
app/src/hooks/: useAppRole.ts  (+7 more)
circuits/: compliance.circom  elgamal_encrypt.circom  export_vk_solana.mjs  merkle_tree_verifier.circom  package.json  setup.sh  test_circuit.mjs  test_comprehensive.mjs  test_recompile.mjs  test_utils.mjs  tiered_threshold.circom
docs/: adr-001-trusted-authority-kyc-registry.md  adr-002-light-protocol-storage.md  adr-003-tokenized-vault-shares.md  adr-004-browser-proof-generation.md  adr-005-elgamal-trapdoor.md  adr-006-wallet-bound-credentials.md  production-roadmap.md
docs/internal/: COORDINATION.md  REVAMP-COORDINATION.md  mainhead.md  vaultproof-technical-bible.md
programs/compliance-admin/: Cargo.toml
programs/compliance-admin/src/: lib.rs
programs/kyc-registry/: Cargo.toml
programs/kyc-registry/src/: lib.rs
programs/vusd-vault/: Cargo.toml
programs/vusd-vault/src/: lib.rs
programs/vusd-vault/src/keys/: mod.rs  verifying_key.rs
scripts/: circuit-artifact-packager.mjs  create-devnet-credentials.sh  deploy-devnet.sh  devnet-bootstrap-helpers.ts  devnet-credential.ts  fund-devnet.sh  init-devnet-state.ts  init-registry-devnet.ts  init-vault-devnet.ts  issue-credential-devnet.ts  package-circuit-artifacts.mjs  refresh-risk-oracle.sh  squads.ts
tests/: circuit_recompile.ts  deploy_devnet_script.test.ts  devnet-bootstrap-helpers.test.ts  integration_e2e.ts  kyc_registry_light.ts  kyc_revocation.ts  package_circuit_artifacts.test.mjs  proof_roundtrip_e2e.ts  tvs_shares.ts  verifier_strict.ts
tests/helpers/: account_utils.ts  proof_utils.ts  test_utils.ts
(+48 files in other folders)
